# opovlint

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conf.json  runner.sh  unit_tests.sh
cmake/: ToolchainOptions.cmake
cmake/modules/: AddLLVM.cmake  FindClang.cmake  FindLLVM.cmake
externalpackages/: CMakeLists.txt
include/: AnalyzerFactory.h  ModuleConsumer.h
include/core/: ASTMatcherModule.h  AbstractFactory.h  AbstractModule.h  AbstractModuleConsumer.h  Application.h  Application.hpp  ClangMatcherExt.h  ClangUtil.h  Configuration.h  ConsoleReporter.h  IFactory.h  Issue.h  IssueHandler.h  IssueHandler.hpp  IssueReporter.h  JSONConfiguration.hpp  Module.h  PropertyMacros.h  TransformationHandler.h  TransformationUtil.h  Util.h  Value.h
include/core/configuration/: Configuration.h  JSONConfiguration.h  JSONConfiguration.hpp
include/core/issue/: Issue.h  IssueHandler.h  IssueHandler.hpp  IssueHandlerStruct.h
include/core/issue/filter/: FilterIssueStruct.h  Filtering.h  IFilter.h  UniqueFilter.h
include/core/issue/map/: PropertyMacros.h  PropertyMap.h  Value.h  ValueTraits.h
include/core/logging/: Logger.h
include/core/module/: ASTMatcherModule.h  ASTMatcherModule.hpp  ASTVisitorModule.h  ASTVisitorModule.hpp  AbstractModule.h  AbstractModule.hpp  Module.h  ModuleContext.h  ModuleRegistry.h
include/core/reporting/: CSVReporter.h  ConsoleReporter.h  FormattedReporter.h  FormattedReporter.hpp  IssueReporter.h  ProgressMonitor.h
include/core/transformation/: TransformationHandler.h  TransformationUtil.h
include/core/utility/: ClangMatcherExt.h  ClangUtil.h  Registry.h  Util.h
include/modules/: AllImplicitConversion.h  ConditionalAssgnMatcher.h  ExplicitCast.h  ExplicitCastVisitor.h  ExplicitConstructor.h  FieldDeclCollector.h  GlobalScope.h  GlobalScopeT.h  IfElseAssign.h  ImplicitCastVisitor.h  ImplicitCondition.h  ImplicitConditionMatcher.h  ImplicitConversion.h  LocalScope.h  UnionMatcher.h
scripts/: clang-analyzer.sh  format_all.sh  sanitizer.sh  unit_tests.sh
src/: AnalyzerFactory.cpp  ModuleConsumer.cpp  OpOvApp.cpp  OpOvApp.h  main.cpp
src/core/: ASTMatcherModule.cpp  AbstractFactory.cpp  AbstractModule.cpp  AbstractModuleConsumer.cpp  Application.cpp  CSVReporter.cpp  ConsoleReporter.cpp  IssueHandler.cpp  IssueReporter.cpp  JSONConfiguration.cpp  ModuleContext.cpp  TransformationHandler.cpp
src/core/configuration/: JSONConfiguration.cpp
src/core/issue/: IssueHandler.cpp
src/core/issue/filter/: Filtering.cpp  UniqueFilter.cpp
src/core/module/: ASTMatcherModule.cpp  AbstractModule.cpp  ModuleContext.cpp
src/core/reporting/: CSVReporter.cpp  ConsoleReporter.cpp  FormattedReporter.cpp  IssueReporter.cpp  ProgressMonitor.cpp
src/core/transformation/: TransformationHandler.cpp
src/modules/: AllImplicitConversion.cpp  ConditionalAssgnMatcher.cpp  ExplicitCast.cpp  ExplicitCastVisitor.cpp  ExplicitConstructor.cpp  FieldDeclCollector.cpp  GlobalScope.cpp  GlobalScopeT.cpp  IfElseAssign.cpp  ImplicitCastVisitor.cpp  ImplicitCondition.cpp  ImplicitConditionMatcher.cpp  ImplicitConversion.cpp  LocalScope.cpp  UnionMatcher.cpp
test/: CMakeLists.txt  lit.cfg
test/collection/: all_implict_conversion.cpp  all_implict_conversion_double.cpp  conditional_assign.cpp  conditional_assign.h  conditional_assign_double.cpp  conditional_ifelse_assign.h  conf.json  conf_double.json  explicit_cast.cpp  explicit_cast_double.cpp  explicit_constructor.cpp  globalscope.cpp  ifelse.cpp  ifelse_double.cpp  implicit_condition.cpp  implicit_condition_double.cpp  implicit_conversion.cpp  implicit_conversion_double.cpp  namespace.cpp  reCast.h  unions.cpp  unions_double.cpp
test/data/: config.json  explctor_conf.json  test_conf.json  test_double_conf.json
test/include/: MockReporter.h  TestApp.h  TestUtil.h
test/project/: CMakeLists.txt  ToolchainOptions.cmake
test/src/: ImplicitConditionDefinition.h  ImplicitConversionDefinition.h  test_allimplicitconversion.cpp  test_conditionalassgn.cpp  test_core.cpp  test_explicitcast.cpp  test_explicitconstructor.cpp  test_globalscope.cpp  test_ifelse.cpp  test_implicitcond.cpp  test_implicitcond_matcher.cpp  test_implicitconversion.cpp  test_system.cpp  test_union_matcher.cpp
test/src/tests/: ConditionalAssignMatchSet.inl  ConditionalAssignNoMatchSet.inl  ConversionMatchSet.inl  ConversionNoMatchSet.inl  ExplicitCastMatchSet.inl  ExplicitCastNoMatchSet.inl  ExplicitConstructorMatchSet.inl  ExplicitConstructorNoMatchSet.inl  ImplicitConditionMatchSet.inl  ImplicitConditionNoMatchSet.inl  UnionMatchSet.inl  UnionNoMatchSet.inl
